--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
   <div class="hero">
     <div class="card">
-      <img src="images/image-qr-code.png" alt="qr">
+      <img src="./image-qr-code.png" alt="qr">
       <h1>Improve your front-end<br>skills by building projects</h1>
       <p>Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
     </div>
